-
Bug
-
Resolution: Done
-
P1: Critical
-
5.5.0
-
Windows, X11, OS X
-
cba6b5c3a1e30757c71b905f368d38c2b123f85e (qtimageformats/5.5, 20.10.2015, 5.5.2)
Qt Creator will crash while trying to attach the *.dds image (DX10) to the *.qrc file. However it works fine, if the DX9 *.dds is used.
The problem is far more wide. Using QImage with the *.dds file (DX10) in MSVC 2012 SP2 will has affect an immediate crash:
An access violation error: "Unhandled exception at 0x000007FEDBC6A2C9
(msvcr110d.dll) in myapp.exe: 0xC0000005: Access violation reading location
0x0000000000000000."
| For Gerrit Dashboard: QTBUG-48851 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 138314,2 | Image viewer example: Fix broken error message formatting. | 5.6 | qt/qtbase | Status: MERGED | +2 | 0 |
| 138315,3 | DDS: Bail out on failure to detect the format. | 5.5 | qt/qtimageformats | Status: MERGED | +2 | 0 |