Image viewer example: Fix broken error message formatting.

Task-number: QTBUG-48851
Change-Id: Ie86bcc498c9dc1f9754192a256a28fa467f6dbc9
Reviewed-by: Shawn Rutledge <shawn.rutledge@theqtcompany.com>